--- a/src/main/resources/templates/admin/backup.html
+++ b/src/main/resources/templates/admin/backup.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorate="~{_layout}">
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorate="~{_layout}">
 	<head>
 		<title th:text="#{administration.backup.title}"></title>
 	</head>
@@ -21,7 +21,7 @@
 					<form id="backupForm" th:action="@{/backup/save}" th:object="${databaseBackupCommand}" action="#" method="post" role="form">						
 						<div class="form-group">
 							<label for="backupFolder" th:text="#{backup.backupFolder} + ':'"></label> 
-							<input type="text" th:field="*{backupFolder}" class="form-control" />
+							<input id="backupFolder" type="text" th:field="*{backupFolder}" class="form-control" />
 							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('backupFolder')}" th:errors="*{backupFolder}">backupFolder error</p>						
 						</div>
 						<div class="form-group">
