--- a/src/main/resources/templates/admin/excel_import.html
+++ b/src/main/resources/templates/admin/excel_import.html
@@ -16,17 +16,14 @@
 						</div>
 						<div class="panel-body">
 							<a href="#" th:href="@{/excelimport/download/template}" th:text="#{excel.download.template}"></a>
-							<br/>
-							<br/>
-							<a href="#" th:href="@{/excelimport/download/wm2018}">WM 2018</a>
 						</div>
 					</div>			
 				</div>	
 				<div class="row">
 					<form th:action="@{/excelimport/upload}" th:object="${excelUploadCommand}" method="post" enctype="multipart/form-data" role="form">
 						<div class="form-group">
-							<label th:text="#{excel.upload.file}"></label><br/>
-					    	<input type="file" th:field="*{myFile}" class="btn btn-default btn-file" />
+							<label for="myFile" th:text="#{excel.upload.file}"></label><br/>
+					    	<input id="myFile" type="file" th:field="*{myFile}" class="btn btn-default btn-file" />
 						</div>
 						<div class="form-group">
 							<span class="label label-danger" th:text="#{excel.download.hint.allMatchesDeleted}"></span>
