--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -13,7 +13,7 @@
 					<input type="hidden" th:field="*{userId}" class="form-control" />
 					<div class="form-group">
 						<label for="username" th:text="#{user.edit.username} + ':'"></label> 
-						<input type="text" th:field="*{username}" class="form-control" readonly="readonly"/>
+						<input id="username" type="text" th:field="*{username}" class="form-control" readonly="readonly"/>
 						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">username error</p>						
 					</div>					
 					<div class="form-group">
