--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -13,19 +13,19 @@
 						<input type="hidden" th:field="*{userId}" class="form-control" />
 						<div class="form-group">
 							<label for="username" th:text="#{user.create.username} + ':'"></label> 
-							<input type="text" th:field="*{username}" class="form-control" size="12" maxlength="12" />
+							<input id="username" type="text" th:field="*{username}" class="form-control" size="12" maxlength="12" />
 							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">username Error</p>
 						</div>
 						<div class="form-group">
 							<label for="password" th:text="#{user.create.password} + ':'"></label>							
-							<input type="password" th:field="*{password}" class="form-control" />
+							<input id="password" type="password" th:field="*{password}" class="form-control" />
 							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password Error</p>
 						</div>
 						<div class="form-group">
 							<label for="roles" th:text="#{user.create.roles} + ':'"></label>			
 							<ul class="list-group">
 								<li class="list-group-item" th:each="role : ${availableRoles}">
-									<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${@webSecurityUtil.isRoleSelectionDisabledForUser(createUserCommand.username)}" />
+									<input id="roles" type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${@webSecurityUtil.isRoleSelectionDisabledForUser(createUserCommand.username)}" />
 									<label th:for="${#ids.prev('roles')}" th:text="#{'msg.' + ${role}}"></label>
 									<span class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
 								th:title="#{'user.edit.tooltip.' + ${role}}"></span>
@@ -34,7 +34,7 @@
 							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}">roles Error</p>
 						</div>						
 						<div th:if="${@runtimeConfigurationUtil.getConfig().isEnabledParentChildRanking()}" class="form-group">									
-							<input type="checkbox" th:field="*{child}" th:value="${child}"/>
+							<input id="child" type="checkbox" th:field="*{child}" th:value="${child}"/>
 							<label for="child" th:text="#{user.create.child}"></label>
 							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('child')}" th:errors="*{child}">child Error</p>
 						</div>
