--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -22,10 +22,10 @@
 							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password Error</p>
 						</div>
 						<div class="form-group">
-							<label for="roles" th:text="#{user.create.roles} + ':'"></label>			
+							<label th:text="#{user.create.roles} + ':'"></label>
 							<ul class="list-group">
 								<li class="list-group-item" th:each="role : ${availableRoles}">
-									<input id="roles" type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${@webSecurityUtil.isRoleSelectionDisabledForUser(createUserCommand.username)}" />
+									<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${@webSecurityUtil.isRoleSelectionDisabledForUser(createUserCommand.username)}" />
 									<label th:for="${#ids.prev('roles')}" th:text="#{'msg.' + ${role}}"></label>
 									<span class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="tooltip" data-placement="top" 
 								th:title="#{'user.edit.tooltip.' + ${role}}"></span>
