added self registration process

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,6 +29,9 @@
 							<button id="loginSubmitBtn" type="submit" class="btn btn-primary" th:text="#{login.button.login}"></button>
 						</div>
 					</div>
+					<div class="row">
+						<a href="#" th:href="@{/registration}" th:text="#{registration.link.text}"></a>
+					</div>
 				</div>
 			</form>
 			<script type="text/javascript" th:src="@{/js/bootstrap-toggle.min.js}"></script>
