--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row" th:if="${@runtimeConfigurationUtil.getConfig().isSelfRegistrationEnabled()}">
 					<div class="col-xs-12 col-sm-12 col-md-12">
 						<span class="small" th:text="#{registration.text}"></span>
 						<a class="small" href="#" th:href="@{/registration}" th:text="#{registration.link.text}"></a>
