--- a/src/main/resources/templates/admin/excel_export.html
+++ b/src/main/resources/templates/admin/excel_export.html
@@ -11,25 +11,33 @@
 			<div class="row">			
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<p th:text="#{excel.export.hint}"></p>
-					<a class="btn btn-primary" role="button" th:href="@{/excelexport/allBets}" th:text="#{administration.excel.export.allBets}"></a>
+					<a class="btn btn-primary" role="button" th:href="@{/excelexport/allBets}">
+						<i class="fa fa-file-excel-o"></i> <span th:text="#{administration.excel.export.allBets}"></span>
+					</a>
 				</div>
 			</div>
 			<hr/>
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<a class="btn btn-primary" role="button" th:href="@{/excelexport/ranking}" th:text="#{administration.excel.export.ranking}"></a>
+					<a class="btn btn-primary" role="button" th:href="@{/excelexport/ranking}">
+						<i class="fa fa-file-excel-o"></i> <span th:text="#{administration.excel.export.ranking}"></span>
+					</a>
 				</div>
 			</div>
 			<hr/>
 			<div class="row">			
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<a class="btn btn-primary" role="button" th:href="@{/excelexport/extraBets}" th:text="#{administration.excel.export.extraBets}"></a>
+					<a class="btn btn-primary" role="button" th:href="@{/excelexport/extraBets}">
+						<i class="fa fa-file-excel-o"></i> <span th:text="#{administration.excel.export.extraBets}"></span>
+					</a>
 				</div>
 			</div>
 			<hr/>
 			<div class="row">			
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<a class="btn btn-primary" role="button" th:href="@{/excelexport/pointsCount}" th:text="#{administration.excel.export.pointsCount}"></a>
+					<a class="btn btn-primary" role="button" th:href="@{/excelexport/pointsCount}">
+						<i class="fa fa-file-excel-o"></i> <span th:text="#{administration.excel.export.pointsCount}"></span>
+					</a>
 				</div>
 			</div>
 		</div>
