--- a/src/main/resources/templates/admin/administration.html
+++ b/src/main/resources/templates/admin/administration.html
@@ -40,6 +40,13 @@
 					</div>
 				</div>
 			</form>
+			<hr/>
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a id="deleteAllUsers" class="btn btn-danger" role="button" th:href="@{/administration/deleteAllUsers}" th:text="#{administration.deleteAllUsers}"
+					   data-toggle="confirmation" data-placement="top" th:data-title="#{confirmation.msg}" th:data-btn-ok-label="#{yes}" th:data-btn-cancel-label="#{no}"></a>
+				</div>
+			</div>
 			<script type="text/javascript" th:src="@{/js/pages/confirmation.js}" charset="UTF-8"></script>
 		</div>
 	</body>
