renamed to standings

--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -105,7 +105,7 @@
 				        		<span class="caret"></span>
 				        	</a>
 				        	<ul class="dropdown-menu">
-								<li th:class="${pageState_grouptable}"><a href="#grouptable" th:href="@{/grouptable}" th:text="#{standings.title}"></a></li>
+								<li th:class="${pageState_standings}"><a href="#standings" th:href="@{/standings}" th:text="#{standings.title}"></a></li>
 								<li th:class="${pageState_info_statistic}"><a href="#misc" th:href="@{/info/statistic}" th:text="#{statistics.title}"></a></li>
 								<li th:class="${pageState_info_pointsfrequency}"><a href="#misc" th:href="@{/info/pointsfrequency}" th:text="#{pointsfrequency.title}"></a></li>
 								<li class="divider" role="separator"></li>
